--- a/index.html
+++ b/index.html
@@ -214,7 +214,9 @@
           <div class="row">
             <div class="col-sm-12 col-md-6 col-lg-4">
               <div class="products-item">
-                <button>Add To Cart</button>
+                <button>
+                  Add To Cart <i class="fa-solid fa-cart-shopping"></i>
+                </button>
                 <div class="products-item-data">
                   <h3>Ramen Stool</h3>
                   <span>$65.00</span>
@@ -226,70 +228,168 @@
 
             <div class="col-sm-12 col-md-6 col-lg-4">
               <div class="products-item">
-                <button>Add To Cart</button>
+                <button>
+                  Add To Cart <i class="fa-solid fa-cart-shopping"></i>
+                </button>
                 <div class="products-item-data">
                   <h3>Ramen Stool</h3>
                   <span>$65.00</span>
                   <span>$95.00</span>
                 </div>
-                <img src="images/Product Image 01.png" alt="" />
-              </div>
-            </div>
-
-
-            <div class="col-sm-12 col-md-6 col-lg-4">
-              <div class="products-item">
-                <button>Add To Cart</button>
-                <div class="products-item-data">
-                  <h3>Ramen Stool</h3>
-                  <span>$65.00</span>
-                  <span>$95.00</span>
-                </div>
-                <img src="images/Product Image 01.png" alt="" />
+                <img src="images/Product Image 02.png" alt="" />
               </div>
             </div>
 
             <div class="col-sm-12 col-md-6 col-lg-4">
               <div class="products-item">
-                <button>Add To Cart</button>
+                <button>
+                  Add To Cart <i class="fa-solid fa-cart-shopping"></i>
+                </button>
                 <div class="products-item-data">
                   <h3>Ramen Stool</h3>
                   <span>$65.00</span>
                   <span>$95.00</span>
                 </div>
-                <img src="images/Product Image 01.png" alt="" />
+                <img src="images/Product Image 02.png" alt="" />
               </div>
             </div>
 
-
             <div class="col-sm-12 col-md-6 col-lg-4">
               <div class="products-item">
-                <button>Add To Cart</button>
+                <button>
+                  Add To Cart <i class="fa-solid fa-cart-shopping"></i>
+                </button>
                 <div class="products-item-data">
                   <h3>Ramen Stool</h3>
                   <span>$65.00</span>
                   <span>$95.00</span>
                 </div>
-                <img src="images/Product Image 01.png" alt="" />
+                <img src="images/Product Image 04.png" alt="" />
               </div>
             </div>
 
-
             <div class="col-sm-12 col-md-6 col-lg-4">
               <div class="products-item">
-                <button>Add To Cart</button>
+                <button>
+                  Add To Cart <i class="fa-solid fa-cart-shopping"></i>
+                </button>
                 <div class="products-item-data">
                   <h3>Ramen Stool</h3>
                   <span>$65.00</span>
                   <span>$95.00</span>
                 </div>
-                <img src="images/Product Image 01.png" alt="" />
+                <img src="images/Product Image 05.png" alt="" />
+              </div>
+            </div>
+
+            <div class="col-sm-12 col-md-6 col-lg-4">
+              <div class="products-item">
+                <button>
+                  Add To Cart <i class="fa-solid fa-cart-shopping"></i>
+                </button>
+                <div class="products-item-data">
+                  <h3>Ramen Stool</h3>
+                  <span>$65.00</span>
+                  <span>$95.00</span>
+                </div>
+                <img
+                  src="images/Product Image 06.png"
+                  class="custom-image"
+                  alt=""
+                />
               </div>
             </div>
           </div>
         </div>
       </div>
     </section>
+
+    <section class="about-us">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 col-md-6">
+            <div class="about-us-images">
+              <img src="images/person1.png" alt="" />
+              <div class="about-us-images-inner">
+                <img src="images/person2.png" alt="" />
+                <img src="images/person3.png" alt="" />
+                <img src="images/person4.png" alt="" />
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-6">
+            <div class="about-us-data">
+              <h3>Let’s see what our customer’s say</h3>
+              <p>
+                Dwelling and speedily ignorant any steepest. Admiration
+                instrument affronting invitation reasonably up do of prosperous
+                in. Shy saw declared age debating ecstatic man. Call in so want
+                pure rank am dear were. Remarkably to continuing in surrounded
+                diminution on.
+              </p>
+              <div class="about-us-data-inner">
+                <h4>Mike Taylor</h4>
+                <div>
+                  <span>20 January 2020</span>
+                  <i class="fa-solid fa-star"></i
+                  ><i class="fa-solid fa-star"></i
+                  ><i class="fa-solid fa-star"></i
+                  ><i class="fa-solid fa-star"></i
+                  ><i class="fa-solid fa-star"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="get-in-touch">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 col-md-8">
+            <div class="get-in-touch-data">
+              <button>Mistrium Interiror</button>
+              <h3>Signup to receive updates about new products</h3>
+              <form action="#">
+                <input type="text" placeholder="Your business email .." />
+                <button>
+                  Get started <i class="fa-sharp fa-solid fa-arrow-right"></i>
+                </button>
+              </form>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-4">
+            <img src="images/getTouch.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-sm-12 col-md-6 col-lg-4">
+            <img src="images/Logo.svg" alt="" />
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg-4">
+            <ul>
+              <li>About</li>
+              <li>Product</li>
+              <li>Service</li>
+              <li>Contact</li>
+            </ul>
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg-4">
+            <div class="social-icon">
+              <i class="fa-brands fa-facebook-f"></i
+              ><i class="fa-brands fa-instagram"></i>
+              <i class="fa-brands fa-youtube"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
